--- a/UI/AnimeStore/package.json
+++ b/UI/AnimeStore/package.json
@@ -14,11 +14,22 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.13.7",
     "@mui/material": "^5.13.7",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-icons": "^4.10.1",
-    "react-router-dom": "^6.14.1"
+    "react-redux": "^8.1.1",
+    "react-router-dom": "^6.14.1",
+    "react-stripe-checkout": "^2.6.3",
+    "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "secure-web-storage": "^1.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
