redux store incompete

--- a/Admin/package.json
+++ b/Admin/package.json
@@ -15,10 +15,18 @@
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.2",
     "@mui/x-data-grid": "^6.10.1",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
-    "recharts": "^2.7.2"
+    "recharts": "^2.7.2",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "redux-persist-transform-encrypt": "^5.0.0",
+    "redux-thunk": "^2.4.2",
+    "secure-web-storage": "^1.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
