--- a/Admin/package.json
+++ b/Admin/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
+    "react-toastify": "^9.1.3",
     "recharts": "^2.7.2",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
